libtimemory (python) is now libpytimemory + Windows fixes

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -77,6 +77,12 @@ build_library(
     CXX_COMPILE_OPTIONS ${${PROJECT_NAME}_CXX_COMPILE_OPTIONS}
     LINK_LIBRARIES      timemory-headers timemory-compile-options)
 
+if(WIN32)
+    # make sure on Windows, static is built first. There is something weird
+    # happening here when built in parallel...
+    add_dependencies(timemory-cxx-shared timemory-cxx-static)
+endif()
+
 add_interface_library(timemory-cxx)
 target_link_libraries(timemory-cxx INTERFACE timemory-cxx-shared)
 
@@ -85,8 +91,13 @@ target_link_libraries(timemory-cxx-shared PRIVATE timemory-compile-options timem
 target_link_libraries(timemory-cxx-static PRIVATE timemory-compile-options timemory-analysis-tools)
 
 if(TIMEMORY_BUILD_EXTERN_TEMPLATES)
-    target_compile_definitions(timemory-cxx-shared PRIVATE TIMEMORY_BUILD_EXTERN_TEMPLATES)
-    target_compile_definitions(timemory-cxx-static PRIVATE TIMEMORY_BUILD_EXTERN_TEMPLATES)
+    if(NOT WIN32)
+        target_compile_definitions(timemory-cxx-shared PRIVATE TIMEMORY_BUILD_EXTERN_TEMPLATES)
+        target_compile_definitions(timemory-cxx-static PRIVATE TIMEMORY_BUILD_EXTERN_TEMPLATES)
+    else()
+        message(WARNING "Building extern templates is not currently supported on Windows")
+        set(TIMEMORY_BUILD_EXTERN_TEMPLATES OFF)
+    endif()
 endif()
 
 if(WIN32)
