Removed PAPI HL interface use + timem updates

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -19,6 +19,27 @@ endif()
 # Embed the link path into the executable
 #
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)
+add_library(timem-libexplain INTERFACE)
+
+add_option(TIMEMORY_BUILD_TOOLS_LIBEXPECT "Enable using libexpect to diagnose errors" OFF)
+if(TIMEMORY_BUILD_TOOLS_LIBEXPECT)
+
+    find_path(LIBEXPLAIN_INCLUDE_DIR
+        NAMES libexplain/execvp.h
+        PATH_SUFFIXES include)
+
+    find_library(LIBEXPLAIN_LIBRARY
+        NAMES explain
+        PATH_SUFFIXES lib lib64 lib32)
+
+    if(LIBEXPLAIN_INCLUDE_DIR AND LIBEXPLAIN_LIBRARY)
+        target_include_directories(timem-libexplain INTERFACE ${LIBEXPLAIN_INCLUDE_DIR})
+        target_compile_definitions(timem-libexplain INTERFACE TIMEMORY_USE_LIBEXPLAIN)
+        target_link_libraries(timem-libexplain INTERFACE ${LIBEXPLAIN_LIBRARY})
+    else()
+        set(TIMEMORY_BUILD_TOOLS_LIBEXPECT OFF)
+    endif()
+endif()
 
 #----------------------------------------------------------------------------------------#
 # PAPI interface library with static linkage if possible
@@ -43,7 +64,8 @@ target_link_libraries(timem PRIVATE
     timemory-compile-options
     timemory-headers
     timemory-cxx-static
-    timem-papi)
+    timem-papi
+    timem-libexplain)
 
 # timem installation
 install(TARGETS timem
