CUPTI updates + code reorganization + cache utilities + roofline + PAPI MT (#8)
- Fixes and extensions to CUPTI interface with cupti_event + backends
- Fixes to cpu_roofline + tim::ert::cache_size + fix to tim::demangle
- graph<T>::size + overhead size check + warning fixes
- libtimemory (python) is now libpytimemory + Windows fixes
- AppVeyor and Travis updates
- Fix to empty CMAKE_BUILD_TYPE
- Added tim::ert::cache_size::get_max()
- Update data.hpp
- cache_size settings updates
- Updates:
 - Add timemory.roofline python module
 - Add fma compilation flag
- Updates:
 - Remove loop over trials
 - Add bytes-per-sec to output
 - Code formatting
- Update roofline.py to plot the roofline graph
- Multithreading support for running ERT kernels
- component_{tuple,list} filtering, PAPI multiplexing, init_storage, papi_array for timem, delimit
- component_tuple and component_list apply filtering
- PAPI multiplexing is supported
- added init_storage to ensure papi_tuple + component_tuple works
- timem now can theoretically use papi_array
- fixes to cpu_roofline to enable multiplexing
- ensure init_multiplexing() is called before creating an event set with multiplexing
- CPU roofline updates for two-pass method
- Roofline updates for plotting
- Fixes to plotting cpu roofline for python 3 and handling two inputs
- Update README.md
- Simplified filtered to zero types component_{list,tuple}
- no need to provide empty overloads
- plotting fixes
- Roofline plotting fixes
- ERT multithreaded fix to kernels
- Update roofline plotting + verbosity handling
- Updated roofline plot size
- Improved customization of cpu_ops_kernel + provide TIMEMORY_VEC
- TIMEMORY_BUILD_EXTRA_OPTIMIZATIONS CMake option
- README and roofline updates
- Multiple rooflines in fib example
- Update roofline.py
- random_fibonacci + update roofline plotting to emulate multiple algorithms
- Simplified test_cxx_roofline_fib.cpp
- Add grids into the roofline graph
- papi_ar

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /.vscode
 /*.nja
 settings.json
+*.swp
 
 # Edit files
 *~
@@ -43,3 +44,12 @@ timing_report*
 # documentation
 /html
 /docs
+
+# images
+/*.png
+/*.tif
+/*.tiff
+/*.jpeg
+/*.jpg
+/*.gif
+/run*.sh
