--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -24,7 +24,11 @@ file(GLOB cxx_headers_ert           ${CMAKE_CURRENT_LIST_DIR}/timemory/ert/*.hpp
 file(GLOB cxx_headers_impl          ${CMAKE_CURRENT_LIST_DIR}/timemory/impl/*.icpp)
 file(GLOB cxx_headers_comp          ${CMAKE_CURRENT_LIST_DIR}/timemory/components/*.hpp)
 file(GLOB cxx_headers_backend       ${CMAKE_CURRENT_LIST_DIR}/timemory/backends/*.hpp)
-file(GLOB cxx_sources               ${CMAKE_CURRENT_LIST_DIR}/ctimemory.cpp)
+file(GLOB cxx_headers_templates     ${CMAKE_CURRENT_LIST_DIR}/timemory/templates/*.hpp)
+file(GLOB cxx_sources               ${CMAKE_CURRENT_LIST_DIR}/ctimemory.cpp
+                                    ${CMAKE_CURRENT_LIST_DIR}/cxx.cpp
+                                    ${CMAKE_CURRENT_LIST_DIR}/init.cpp)
+file(GLOB cuda_sources              ${CMAKE_CURRENT_LIST_DIR}/cuda.cpp)
 file(GLOB_RECURSE cereal_headers    ${CMAKE_CURRENT_LIST_DIR}/cereal/include/*.hpp
                                     ${CMAKE_CURRENT_LIST_DIR}/cereal/include/*.h
                                     ${CMAKE_CURRENT_LIST_DIR}/cereal/include/*.hh)
@@ -45,9 +49,10 @@ add_subdirectory(timemory)
 #
 # directly compile sources
 set(C_LIBRARY_SOURCES    ${c_sources}        ${c_headers})
-set(CXX_LIBRARY_SOURCES  ${cxx_sources}      ${cxx_headers}      ${cxx_headers_ert}
+set(CXX_LIBRARY_SOURCES  ${cxx_sources}      ${cxx_headers}      ${cxx_headers_templates}
                          ${cxx_headers_comp} ${cxx_headers_impl} ${cxx_headers_backend}
-                         ${cereal_headers})
+                         ${cxx_headers_ert}  ${cereal_headers})
+set(CUDA_LIBRARY_SOURCES ${cuda_sources})
 
 
 #----------------------------------------------------------------------------------------#
@@ -75,7 +80,7 @@ build_library(
     OUTPUT_DIR          ${PROJECT_BINARY_DIR}
     SOURCES             ${CXX_LIBRARY_SOURCES}
     CXX_COMPILE_OPTIONS ${${PROJECT_NAME}_CXX_COMPILE_OPTIONS}
-    LINK_LIBRARIES      timemory-headers timemory-compile-options)
+    LINK_LIBRARIES      timemory-headers)
 
 if(WIN32)
     # make sure on Windows, static is built first. There is something weird
@@ -105,6 +110,62 @@ if(WIN32)
     target_compile_definitions(timemory-cxx-static PUBLIC  _TIMEMORY_ARCHIVE)
 endif()
 
+
+#----------------------------------------------------------------------------------------#
+# build the CUDA libraries
+#
+if(TIMEMORY_USE_CUDA)
+
+    build_library(
+        PIC
+        TYPE                SHARED
+        TARGET_NAME         timemory-cuda-shared
+        OUTPUT_NAME         cutimemory
+        LANGUAGE            CXX
+        LINKER_LANGUAGE     CUDA
+        OUTPUT_DIR          ${PROJECT_BINARY_DIR}
+        SOURCES             ${CUDA_LIBRARY_SOURCES}
+        CXX_COMPILE_OPTIONS ${${PROJECT_NAME}_CXX_COMPILE_OPTIONS}
+        COMPILE_DEFINITIONS
+        LINK_LIBRARIES      timemory-headers timemory-cuda timemory-cudart)
+
+    build_library(
+        TYPE                STATIC
+        TARGET_NAME         timemory-cuda-static
+        OUTPUT_NAME         cutimemory
+        LANGUAGE            CXX
+        LINKER_LANGUAGE     CUDA
+        OUTPUT_DIR          ${PROJECT_BINARY_DIR}
+        SOURCES             ${CUDA_LIBRARY_SOURCES}
+        CXX_COMPILE_OPTIONS ${${PROJECT_NAME}_CXX_COMPILE_OPTIONS}
+        LINK_LIBRARIES      timemory-headers timemory-cuda timemory-cudart-static)
+
+    if(WIN32)
+        # make sure on Windows, static is built first. There is something weird
+        # happening here when built in parallel...
+        add_dependencies(timemory-cuda-shared timemory-cuda-static)
+    endif()
+
+    # private compile options
+    target_link_libraries(timemory-cuda-shared PRIVATE timemory-compile-options timemory-analysis-tools)
+    target_link_libraries(timemory-cuda-static PRIVATE timemory-compile-options timemory-analysis-tools)
+
+    if(TIMEMORY_BUILD_EXTERN_TEMPLATES)
+        if(NOT WIN32)
+            target_compile_definitions(timemory-cuda-shared PRIVATE TIMEMORY_BUILD_EXTERN_TEMPLATES)
+            target_compile_definitions(timemory-cuda-static PRIVATE TIMEMORY_BUILD_EXTERN_TEMPLATES)
+        else()
+            message(WARNING "Building extern templates is not currently supported on Windows")
+            set(TIMEMORY_BUILD_EXTERN_TEMPLATES OFF)
+        endif()
+    endif()
+
+    if(WIN32)
+        target_compile_definitions(timemory-cuda-shared PRIVATE _TIMEMORY_DLL)
+        target_compile_definitions(timemory-cuda-static PUBLIC  _TIMEMORY_ARCHIVE)
+    endif()
+
+endif()
 
 #----------------------------------------------------------------------------------------#
 # build the C libraries
@@ -158,34 +219,30 @@ endif()
 install(
     TARGETS ${TIMEMORY_COMPILED_LIBRARIES} ${TIMEMORY_INTERFACE_LIBRARIES}
     DESTINATION ${TIMEMORY_INSTALL_LIBDIR}
-    EXPORT ${PROJECT_NAME}LibraryDepends
-    COMPONENT development)
+    EXPORT ${PROJECT_NAME}LibraryDepends)
 
 # C/C++ development headers
 install(FILES ${cxx_headers} ${c_headers}
-    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory
-    COMPONENT development)
+    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory)
 
 install(FILES ${cxx_headers_impl}
-    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/impl
-    COMPONENT development)
+    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/impl)
 
 install(FILES ${cxx_headers_comp}
-    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/components
-    COMPONENT development)
+    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/components)
 
 install(FILES ${cxx_headers_ert}
-    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/ert
-    COMPONENT development)
+    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/ert)
 
 install(FILES ${cxx_headers_backend}
-    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/backends
-    COMPONENT development)
+    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/backends)
+
+install(FILES ${cxx_headers_templates}
+    DESTINATION ${TIMEMORY_INSTALL_INCLUDEDIR}/timemory/templates)
 
 # Install the export set for use with the install-tree
 install(EXPORT ${PROJECT_NAME}LibraryDepends
-    DESTINATION ${TIMEMORY_INSTALL_CMAKEDIR}
-    COMPONENT development)
+    DESTINATION ${TIMEMORY_INSTALL_CMAKEDIR})
 
 export(
     TARGETS ${TIMEMORY_COMPILED_LIBRARIES} ${TIMEMORY_INTERFACE_LIBRARIES}
@@ -217,7 +274,6 @@ if(TIMEMORY_BUILD_PYTHON AND NOT SKBUILD)
 
     install(FILES ${PROJECT_BINARY_DIR}/timemory-plotter
         DESTINATION ${TIMEMORY_INSTALL_BINDIR}
-        COMPONENT development
         PERMISSIONS
         OWNER_EXECUTE OWNER_READ OWNER_WRITE
         GROUP_EXECUTE GROUP_READ
