--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -72,8 +72,7 @@ foreach(_SUBMODULE plotting mpi_support util ert roofline)
         configure_file(${SOURCE_DIR}/${_SUBMODULE}.py
             ${BINARY_DIR}/${_SUBMODULE}.py @ONLY)
         install(FILES ${BINARY_DIR}/${_SUBMODULE}.py
-            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/
-            COMPONENT python)
+            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
     endif()
 
     # copy over the init file
@@ -81,8 +80,7 @@ foreach(_SUBMODULE plotting mpi_support util ert roofline)
         configure_file(${SOURCE_DIR}/__init__.py
             ${BINARY_DIR}/__init__.py @ONLY)
         install(FILES ${BINARY_DIR}/__init__.py
-            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/
-            COMPONENT python)
+            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
     endif()
 
     # copy over the main file
@@ -90,8 +88,7 @@ foreach(_SUBMODULE plotting mpi_support util ert roofline)
         configure_file(${SOURCE_DIR}/__main__.py
             ${BINARY_DIR}/__main__.py @ONLY)
         install(FILES ${BINARY_DIR}/__main__.py
-            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/
-            COMPONENT python)
+            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
     endif()
 
 endforeach()
@@ -140,21 +137,18 @@ endforeach(_TYPE exe c cxx)
 configure_file(${PROJECT_SOURCE_DIR}/timemory/__init__.py.in
     ${CMAKE_BINARY_DIR}/timemory/__init__.py @ONLY)
 install(FILES ${CMAKE_BINARY_DIR}/timemory/__init__.py
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}
-    COMPONENT python)
+    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR})
 
 foreach(PYLIB_SUBMODULE options units signals)
     configure_file(${PROJECT_SOURCE_DIR}/timemory/${PYLIB_SUBMODULE}.py
         ${CMAKE_BINARY_DIR}/timemory/${PYLIB_SUBMODULE}.py @ONLY)
     install(FILES ${CMAKE_BINARY_DIR}/timemory/${PYLIB_SUBMODULE}.py
-        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}
-        COMPONENT python)
+        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR})
 endforeach()
 
 # Python library target (linked to static target)
 install(TARGETS libpytimemory
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}
-    COMPONENT python)
+    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR})
 
 #----------------------------------------------------------------------------
 # Python testing
@@ -183,8 +177,7 @@ foreach(_FILE ${TEST_FILES})
 
     # install them though
     install(FILES ${CMAKE_BINARY_DIR}/timemory/tests/${_FILE}
-        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/tests
-        COMPONENT python)
+        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/tests)
 
 endforeach(_FILE ${TEST_FILES})
 
