Introduced Google-Test
- Update pyctest-runner.py
- Update CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,11 @@ endif()
 
 cmake_policy(SET CMP0048 NEW)
 cmake_policy(SET CMP0042 NEW)
+# this gets annoying
+if(TIMEMORY_BUILD_GTEST)
+    set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS ON CACHE BOOL
+        "Suppress Warnings that are meant for the author of the CMakeLists.txt files")
+endif()
 
 #----------------------------------------------------------------------------------------#
 #   versioning
@@ -77,6 +82,20 @@ foreach(_TYPE ARCHIVE LIBRARY RUNTIME)
 endforeach()
 
 #----------------------------------------------------------------------------------------#
+#   configuration
+#----------------------------------------------------------------------------------------#
+
+include(MacroUtilities)
+include(Options)
+include(Compilers)
+include(GNUInstallDirs)
+include(ProjectSettings)
+include(BuildSettings)
+include(Packages)
+include(ClangFormat)
+include(CMakeParseArguments)
+
+#----------------------------------------------------------------------------------------#
 #   TiMemory source
 #----------------------------------------------------------------------------------------#
 
@@ -88,4 +107,6 @@ add_subdirectory(source)
 
 set(TiMemory_DIR "${CMAKE_BINARY_DIR}" CACHE STRING "TiMemory install directory" FORCE)
 add_subdirectory(examples)
-enable_testing()
+
+# include(GoogleTest)
+# gtest_discover_tests()
