--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "source/python/pybind11"]
 	path = source/python/pybind11
 	url = https://github.com/jrmadsen/pybind11.git
+[submodule "source/google-test"]
+	path = source/google-test
+	url = https://github.com/google/googletest.git
