--- a/.travis.yml
+++ b/.travis.yml
@@ -277,12 +277,12 @@ install:
     - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
     - if [ -z "${USE_MPI}" ]; then ARGS="${ARGS} --no-mpi"; fi
     - travis_wait 20 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=${BUILD_TYPE}
-    - travis_wait 20 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=RelWithDebInfo --profile=cpu
+    - travis_wait 20 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=RelWithDebInfo --no-py --profile=cpu
+    - travis_wait 20 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=Debug          --no-py --coverage
     # - travis_wait 20 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=RelWithDebInfo --profile=heap
-    - travis_wait 20 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=Debug          --coverage
 
 script:
-    - python setup.py install
+    - python setup.py install -- -DTIMEMORY_BUILD_C=OFF -DTIMEMORY_BUILD_TOOLS=OFF
     - python -c "import timemory; print(timemory.__file__)"
     - echo "python${TRAVIS_PYTHON_VERSION} testing -- Done"
 
